--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					<div class="counter-wrap ftco-animate d-flex mt-md-3">
 						<div class="text">
 							<p class="mb-4">
-								<span class="number" data-number="120">0</span>
+								<span class="number" data-number="70">0</span>
 								<span>Project complete</span>
 							</p>
 							<p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
@@ -164,7 +164,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4 animate-box">
+				<!-- <div class="col-md-4 animate-box">
 					<div class="progress-wrap ftco-animate">
 						<h3>JavaScript</h3>
 						<div class="progress">
@@ -262,7 +262,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<div class="col-md-4 animate-box">
 					<div class="progress-wrap ftco-animate">
 						<h3>CSS3</h3>
@@ -443,7 +443,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-4 text-center d-flex ftco-animate">
+				<!-- <div class="col-md-4 text-center d-flex ftco-animate">
 					<a href="#" class="services-1">
 						<span class="icon">
 							<i class="fi fi-rr-shopping-bag"></i>
@@ -496,13 +496,13 @@
 				<div class="col-md-4 text-center d-flex ftco-animate">
 					<a href="#" class="services-1">
 						<span class="icon">
-							<i class="fi fi-rr-list-check"></i>
+							<i class="fi fi-rr-video-duration"></i>
 						</span>
 						<div class="desc">
 							<h3 class="mb-5">Video and Live Chat Software</h3>
 						</div>
 					</a>
-				</div>
+				</div> -->
 				<div class="col-md-4 text-center d-flex ftco-animate">
 					<a href="#" class="services-1">
 						<span class="icon">
@@ -570,65 +570,60 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-4">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2014-2015</span>
 						<h2>Master Degree of Design</h2>
 						<span class="position">Cambridge University</span>
-						<p class="mt-4">A small river named Duden flows by their place and supplies it with the
-							necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly
-							into your mouth.</p>
 					</div>
+				</div>
+				<div class="col-md-4">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2014-2015</span>
 						<h2>Bachelor's Degree of C.A</h2>
 						<span class="position">Cambridge University</span>
-						<p class="mt-4">A small river named Duden flows by their place and supplies it with the
-							necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly
-							into your mouth.</p>
 					</div>
+				</div>
+				<div class="col-md-4">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2014-2015</span>
-						<h2>Diploma in Computer</h2>
+						<h2>Bachelor's Degree of C.A</h2>
 						<span class="position">Cambridge University</span>
-						<p class="mt-4">A small river named Duden flows by their place and supplies it with the
-							necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly
-							into your mouth.</p>
 					</div>
 				</div>
 
-				<div class="col-md-6">
+
+				<div class="col-md-4">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2014-2015</span>
 						<h2>Art &amp; Creative Director</h2>
 						<span class="position">Cambridge University</span>
-						<p class="mt-4">A small river named Duden flows by their place and supplies it with the
-							necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly
-							into your mouth.</p>
 					</div>
+				</div>
+				<div class="col-md-4">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2014-2015</span>
-						<h2>Wordpress Developer</h2>
+						<h2>Art &amp; Creative Director</h2>
 						<span class="position">Cambridge University</span>
-						<p class="mt-4">A small river named Duden flows by their place and supplies it with the
-							necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly
-							into your mouth.</p>
 					</div>
+				</div>
+				<div class="col-md-4">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2017-2018</span>
-						<h2>UI/UX Designer</h2>
+						<span class="date">2014-2015</span>
+						<h2>Art &amp; Creative Director</h2>
 						<span class="position">Cambridge University</span>
-						<p class="mt-4">A small river named Duden flows by their place and supplies it with the
-							necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly
-							into your mouth.</p>
 					</div>
 				</div>
 			</div>
-			<div class="row justify-content-center mt-5">
-				<div class="col-md-6 text-center ftco-animate">
-					<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
-				</div>
+		</div>
+
+
+		</div>
+		<div class="row justify-content-center mt-5">
+			<div class="col-md-6 text-center ftco-animate">
+				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
 			</div>
+		</div>
 		</div>
 	</section>
 	<!-- Resume-section end -->
@@ -1008,11 +1003,16 @@
 					<div class="ftco-footer-widget mb-4 ml-md-4">
 						<h2 class="ftco-heading-2">Links</h2>
 						<ul class="list-unstyled">
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
+							<li><a href="#home-section"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
+							<li><a href="#about-section"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
+							<li><a href="#skills-section"><span class="icon-long-arrow-right mr-2"></span>Skills</a>
+							</li>
+							<li><a href="#services-section"><span class="icon-long-arrow-right mr-2"></span>Services</a>
+							</li>
+							<li><a href="#projects-section"><span class="icon-long-arrow-right mr-2"></span>Projects</a>
+							</li>
+							<li><a href="#contact-section"><span class="icon-long-arrow-right mr-2"></span>Contact</a>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -1020,11 +1020,17 @@
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Services</h2>
 						<ul class="list-unstyled">
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Design</a></li>
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Business Strategy</a></li>
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Analysis</a></li>
-							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Graphic Design</a></li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Software Development</a>
+							</li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Full-Stack Development</a>
+							</li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>ERP Systems</a></li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>E-commerce Solutions</a>
+							</li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span> Database Management</a>
+							</li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span> Maintenance and Support</a>
+							</li>
 						</ul>
 					</div>
 				</div>
