--- a/portfolio-details -1.html
+++ b/portfolio-details -1.html
@@ -57,7 +57,7 @@
 
       <div class="row gy-4">
 
-        <div class="col-lg-8">
+        <div class="col-lg-8 order-lg-first order-last">
           <div class="portfolio-details-slider swiper">
             <div class="swiper-wrapper align-items-center">
 
@@ -74,55 +74,104 @@
               </div>
             </div>
             <div class="swiper-pagination"></div>
-          </div> 
-                <!-- tag section -->
-          <div class="tag-box ftco-animate fadeInUp ftco-animated">
-            <h3 class="heading-sidebar">TECHNOLOGIES</h3>
-            <div class="tagcloud">
-              <a href="#" class="tag-cloud-link">Html</a>
-              <a href="#" class="tag-cloud-link">Css</a>
-              <a href="#" class="tag-cloud-link">Tailwind</a>
-              <a href="#" class="tag-cloud-link">Php</a>
-              <a href="#" class="tag-cloud-link">Laravel</a>
-              <a href="#" class="tag-cloud-link">JavaScript</a>
-              <a href="#" class="tag-cloud-link">Vue js</a>
-              <a href="#" class="tag-cloud-link">React</a>
-              <a href="#" class="tag-cloud-link">jquery</a>
-              <a href="#" class="tag-cloud-link">Scss</a>
-              <a href="#" class="tag-cloud-link">Aos</a>
-              <a href="#" class="tag-cloud-link">land</a>
-              <a href="#" class="tag-cloud-link">table</a>
-              <a href="#" class="tag-cloud-link">interior</a>
-              <a href="#" class="tag-cloud-link">exterior</a>
-              <a href="#" class="tag-cloud-link">industrial</a>
-            </div>
           </div>
         </div>
-
-        <div class="col-lg-4">
-          <div class="portfolio-info">
-            <h3>Project information</h3>
-            <ul>
-              <li><strong>Category</strong>: Web design</li>
-              <li><strong>Client</strong>: ASU Company</li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
-            </ul>
-          </div>
-          <div class="portfolio-description">
-            <h2>This is an example of portfolio detail</h2>
-            <p>
-              Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia.
-              Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia
-              accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt
-              eius.
-            </p>
-          </div>
-        </div>
-
+		<div class="col-lg-4 order-lg-last order-first">
+			<div class="order-first order-lg-last">
+			  <div class="portfolio-info">
+				<h3>Project information</h3>
+				<ul>
+				  <li><strong>Category</strong>: Web design</li>
+				  <li><strong>Client</strong>: ASU Company</li>
+				  <li><strong>Project date</strong>: 01 March, 2020</li>
+				  <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+				</ul>
+			  </div>
+			</div>
+		</div>
       </div>
-
+	  <div class="row gy-4">
+		<div class="col-lg-8">
+			<!-- tag section -->
+			<div class="tag-box ftco-animate fadeInUp ftco-animated">
+			  <h3 class="heading-sidebar">TECHNOLOGIES</h3>
+			  <div class="tagcloud">
+				<a href="#" class="tag-cloud-link">Html</a>
+				<a href="#" class="tag-cloud-link">Css</a>
+				<a href="#" class="tag-cloud-link">Tailwind</a>
+				<a href="#" class="tag-cloud-link">Php</a>
+				<a href="#" class="tag-cloud-link">Laravel</a>
+				<a href="#" class="tag-cloud-link">JavaScript</a>
+				<a href="#" class="tag-cloud-link">Vue js</a>
+				<a href="#" class="tag-cloud-link">React</a>
+				<a href="#" class="tag-cloud-link">jquery</a>
+				<a href="#" class="tag-cloud-link">Scss</a>
+				<a href="#" class="tag-cloud-link">Aos</a>
+				<a href="#" class="tag-cloud-link">land</a>
+				<a href="#" class="tag-cloud-link">table</a>
+				<a href="#" class="tag-cloud-link">interior</a>
+				<a href="#" class="tag-cloud-link">exterior</a>
+				<a href="#" class="tag-cloud-link">industrial</a>
+			  </div>
+			</div>
+			<!-- description -->
+			<div class="portfolio-description">
+			  <h2>This is an example of portfolio detail</h2>
+			  <p>
+				Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia.
+				Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia
+				accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt
+				eius.Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia.
+				Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia
+				accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt
+				eius.
+			  </p>
+			</div>
+		</div>
+		<div class="col-lg-4">
+			<div class="d-flex ftco-animate">
+			  <div class="blog-entry justify-content-end">
+				<a href="single.html" class="block-20" style="background-image: url('assets/img/image_1.jpg');">
+				</a>
+				<div class="text mt-3 float-right d-block">
+				  <div class="d-flex align-items-center mb-3 meta">
+					<p class="mb-0">
+					  <span class="mr-2">June 21, 2019</span>
+					  <a href="#" class="mr-2">Admin</a>
+					  <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
+					</p>
+				  </div>
+				  <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a>
+				  </h3>
+				  <p>A small river named Duden flows by their place and supplies it with the necessary
+					regelialia.</p>
+				</div>
+			  </div>
+			</div>
+			<div class="d-flex ftco-animate">
+			  <div class="blog-entry justify-content-end">
+				<a href="single.html" class="block-20" style="background-image: url('assets/img/image_1.jpg');">
+				</a>
+				<div class="text mt-3 float-right d-block">
+				  <div class="d-flex align-items-center mb-3 meta">
+					<p class="mb-0">
+					  <span class="mr-2">June 21, 2019</span>
+					  <a href="#" class="mr-2">Admin</a>
+					  <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
+					</p>
+				  </div>
+				  <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a>
+				  </h3>
+				  <p>A small river named Duden flows by their place and supplies it with the necessary
+					regelialia.</p>
+				</div>
+			  </div>
+			</div>
+		</div>
+      </div>
     </div>
+
+    
   </section><!-- End Portfolio Details Section -->
   <!-- End #main -->
   <!-- Footer section start -->
@@ -145,11 +194,14 @@
           <div class="ftco-footer-widget mb-4 ml-md-4">
             <h2 class="ftco-heading-2">Links</h2>
             <ul class="list-unstyled">
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
+              <li><a href="/index.html#home-section"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
+              <li><a href="/index.html#about-section"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
+              <li><a href="/index.html#skills-section"><span class="icon-long-arrow-right mr-2"></span>Skills</a></li>
+              <li><a href="/index.html#services-section"><span class="icon-long-arrow-right mr-2"></span>Services</a>
+              </li>
+              <li><a href="/index.html#projects-section"><span class="icon-long-arrow-right mr-2"></span>Projects</a>
+              </li>
+              <li><a href="/index.html#contact-section"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
             </ul>
           </div>
         </div>
@@ -157,11 +209,12 @@
           <div class="ftco-footer-widget mb-4">
             <h2 class="ftco-heading-2">Services</h2>
             <ul class="list-unstyled">
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Design</a></li>
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Business Strategy</a></li>
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Analysis</a></li>
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Graphic Design</a></li>
+              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Software Development</a></li>
+              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Full-Stack Development</a></li>
+              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>ERP Systems</a></li>
+              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>E-commerce Solutions</a></li>
+              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span> Database Management</a></li>
+              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span> Maintenance and Support</a></li>
             </ul>
           </div>
         </div>
