--- a/portfolio-details -6.html
+++ b/portfolio-details -6.html
@@ -145,24 +145,26 @@
           <div class="ftco-footer-widget mb-4 ml-md-4">
             <h2 class="ftco-heading-2">Links</h2>
             <ul class="list-unstyled">
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
-            </ul>
+							<li><a href="/index.html#home-section"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
+							<li><a href="/index.html#about-section"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
+              <li><a href="/index.html#skills-section"><span class="icon-long-arrow-right mr-2"></span>Skills</a></li>
+							<li><a href="/index.html#services-section"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
+							<li><a href="/index.html#projects-section"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
+							<li><a href="/index.html#contact-section"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
+						</ul>
           </div>
         </div>
         <div class="col-md">
           <div class="ftco-footer-widget mb-4">
             <h2 class="ftco-heading-2">Services</h2>
             <ul class="list-unstyled">
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Design</a></li>
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Business Strategy</a></li>
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Analysis</a></li>
-              <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Graphic Design</a></li>
-            </ul>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Software Development</a></li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Full-Stack Development</a></li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>ERP Systems</a></li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>E-commerce Solutions</a></li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span> Database Management</a></li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span> Maintenance and Support</a></li>
+						</ul>
           </div>
         </div>
         <div class="col-md">
